{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 92,
  "lineage": "c7d484de-5834-e9f8-0dd5-e07bea2a4ec6",
  "resources": [
    {
      "module": "module.ec2module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:485217407576:instance/i-0ca215512e7d82ca3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca215512e7d82ca3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0409d16a86dc3193d",
            "private_dns": "ip-172-31-1-215.eu-west-1.compute.internal",
            "private_ip": "172.31.1.215",
            "public_dns": "ec2-52-17-92-224.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.17.92.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-080fd2d7e614014fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-81d8c4e7",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-98c568c9"
            ]
          }
        }
      ]
    },
    {
      "module": "module.ec2module.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08b513a353d92048d",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-251-52-118.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.251.52.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d8ffd9347597837d",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-50-225-103.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.50.225.103",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1c",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2module.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:internet-gateway/igw-0b760c119cec4ab11",
            "id": "igw-0b760c119cec4ab11",
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03ef60690fa96164a"
          },
          "dependencies": [
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2module.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2module.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2module.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b760c119cec4ab11",
            "id": "r-rtb-04b89575edf78b5681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04b89575edf78b568",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2module.module.vpc.aws_internet_gateway.this",
            "module.ec2module.module.vpc.aws_route_table.public",
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2module.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:route-table/rtb-07de152f7a66608cb",
            "id": "rtb-07de152f7a66608cb",
            "owner_id": "485217407576",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03ef60690fa96164a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:route-table/rtb-08351458c7bc4d2ff",
            "id": "rtb-08351458c7bc4d2ff",
            "owner_id": "485217407576",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03ef60690fa96164a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:route-table/rtb-0b827d4b6c56e4226",
            "id": "rtb-0b827d4b6c56e4226",
            "owner_id": "485217407576",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03ef60690fa96164a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2module.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:route-table/rtb-04b89575edf78b568",
            "id": "rtb-04b89575edf78b568",
            "owner_id": "485217407576",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03ef60690fa96164a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2module.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f04bc570cead0e8",
            "route_table_id": "rtb-07de152f7a66608cb",
            "subnet_id": "subnet-0df44b023ac40185c"
          },
          "dependencies": [
            "module.ec2module.module.vpc.aws_route_table.private",
            "module.ec2module.module.vpc.aws_subnet.private",
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084372829d70f86e3",
            "route_table_id": "rtb-08351458c7bc4d2ff",
            "subnet_id": "subnet-0a7109983c595740a"
          },
          "dependencies": [
            "module.ec2module.module.vpc.aws_route_table.private",
            "module.ec2module.module.vpc.aws_subnet.private",
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e25f0bf904a5aa88",
            "route_table_id": "rtb-0b827d4b6c56e4226",
            "subnet_id": "subnet-02b33027928835634"
          },
          "dependencies": [
            "module.ec2module.module.vpc.aws_route_table.private",
            "module.ec2module.module.vpc.aws_subnet.private",
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2module.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00337360321b28021",
            "route_table_id": "rtb-04b89575edf78b568",
            "subnet_id": "subnet-07c1e98dea3f0a478"
          },
          "dependencies": [
            "module.ec2module.module.vpc.aws_route_table.public",
            "module.ec2module.module.vpc.aws_subnet.public",
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a425d82fa96ca82",
            "route_table_id": "rtb-04b89575edf78b568",
            "subnet_id": "subnet-01cd4a50c9367773c"
          },
          "dependencies": [
            "module.ec2module.module.vpc.aws_route_table.public",
            "module.ec2module.module.vpc.aws_subnet.public",
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b52b93a8493041b",
            "route_table_id": "rtb-04b89575edf78b568",
            "subnet_id": "subnet-051362bb4cd02654e"
          },
          "dependencies": [
            "module.ec2module.module.vpc.aws_route_table.public",
            "module.ec2module.module.vpc.aws_subnet.public",
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2module.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-0df44b023ac40185c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0df44b023ac40185c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03ef60690fa96164a"
          },
          "dependencies": [
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-0a7109983c595740a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a7109983c595740a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03ef60690fa96164a"
          },
          "dependencies": [
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-02b33027928835634",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-02b33027928835634",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03ef60690fa96164a"
          },
          "dependencies": [
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2module.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-07c1e98dea3f0a478",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-07c1e98dea3f0a478",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03ef60690fa96164a"
          },
          "dependencies": [
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-01cd4a50c9367773c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-01cd4a50c9367773c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03ef60690fa96164a"
          },
          "dependencies": [
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-051362bb4cd02654e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-051362bb4cd02654e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03ef60690fa96164a"
          },
          "dependencies": [
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2module.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:vpc/vpc-03ef60690fa96164a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0578da01bd79132b7",
            "default_route_table_id": "rtb-052d06870ba29b1cd",
            "default_security_group_id": "sg-075d224e9d3125adf",
            "dhcp_options_id": "dopt-e00f1286",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03ef60690fa96164a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-052d06870ba29b1cd",
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2module.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:security-group/sg-080ec14bdf8f05d85",
            "description": "Security group for web-server with HTTP ports open within VPC",
            "egress": [],
            "id": "sg-080ec14bdf8f05d85",
            "ingress": [],
            "name": "web-server-20210514065801016200000002",
            "name_prefix": "web-server-",
            "owner_id": "485217407576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ef60690fa96164a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2module.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2module.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3369115196",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-080ec14bdf8f05d85",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.web_server_sg.module.sg.aws_security_group.this",
            "module.ec2module.module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2module.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1719285350",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-080ec14bdf8f05d85",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.web_server_sg.module.sg.aws_security_group.this",
            "module.ec2module.module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2module.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-833955138",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-080ec14bdf8f05d85",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2module.module.vpc.aws_vpc.this",
            "module.ec2module.module.web_server_sg.module.sg.aws_security_group.this",
            "module.ec2module.module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.sgcmodule",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:485217407576:instance/i-01c8ca7e4dea85d08",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c8ca7e4dea85d08",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09d140b85aa8c0beb",
            "private_dns": "ip-172-31-15-193.eu-west-1.compute.internal",
            "private_ip": "172.31.15.193",
            "public_dns": "ec2-3-249-56-162.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.249.56.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-008d543adb5276f0e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-81d8c4e7",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-98c568c9"
            ]
          }
        }
      ]
    },
    {
      "module": "module.sgcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-085b41f9080878e14",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-18-200-158-211.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.200.158.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.sgcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:internet-gateway/igw-0e78d93ba70d4e624",
            "id": "igw-0e78d93ba70d4e624",
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a2df33f46a9fcce"
          },
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sgcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.sgcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.sgcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e78d93ba70d4e624",
            "id": "r-rtb-029eb608da7cdd7f61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-029eb608da7cdd7f6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_internet_gateway.this",
            "module.sgcmodule.module.vpc.aws_route_table.public",
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sgcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:route-table/rtb-063860b6899b5a4a3",
            "id": "rtb-063860b6899b5a4a3",
            "owner_id": "485217407576",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a2df33f46a9fcce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:route-table/rtb-0562eb2de0177a402",
            "id": "rtb-0562eb2de0177a402",
            "owner_id": "485217407576",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a2df33f46a9fcce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:route-table/rtb-0d0bc9dbd7caa3d48",
            "id": "rtb-0d0bc9dbd7caa3d48",
            "owner_id": "485217407576",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a2df33f46a9fcce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sgcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:route-table/rtb-029eb608da7cdd7f6",
            "id": "rtb-029eb608da7cdd7f6",
            "owner_id": "485217407576",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a2df33f46a9fcce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sgcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a2993251f6ffea2",
            "route_table_id": "rtb-063860b6899b5a4a3",
            "subnet_id": "subnet-08a35c10e7f7dac69"
          },
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_route_table.private",
            "module.sgcmodule.module.vpc.aws_subnet.private",
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02efc71d5614c7bbb",
            "route_table_id": "rtb-0562eb2de0177a402",
            "subnet_id": "subnet-087f1d5097a3477d8"
          },
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_route_table.private",
            "module.sgcmodule.module.vpc.aws_subnet.private",
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02634b3eef50981e8",
            "route_table_id": "rtb-0d0bc9dbd7caa3d48",
            "subnet_id": "subnet-08c75a657628b6d90"
          },
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_route_table.private",
            "module.sgcmodule.module.vpc.aws_subnet.private",
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sgcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c11313b5763a991",
            "route_table_id": "rtb-029eb608da7cdd7f6",
            "subnet_id": "subnet-0a7d1b538bd6461af"
          },
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_route_table.public",
            "module.sgcmodule.module.vpc.aws_subnet.public",
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b7bc7c9939e38c3",
            "route_table_id": "rtb-029eb608da7cdd7f6",
            "subnet_id": "subnet-08dad4e1acfd0237c"
          },
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_route_table.public",
            "module.sgcmodule.module.vpc.aws_subnet.public",
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01534ac293bbad011",
            "route_table_id": "rtb-029eb608da7cdd7f6",
            "subnet_id": "subnet-0097738fa79c7b2f8"
          },
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_route_table.public",
            "module.sgcmodule.module.vpc.aws_subnet.public",
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sgcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-08a35c10e7f7dac69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08a35c10e7f7dac69",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a2df33f46a9fcce"
          },
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-087f1d5097a3477d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-087f1d5097a3477d8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a2df33f46a9fcce"
          },
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-08c75a657628b6d90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08c75a657628b6d90",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a2df33f46a9fcce"
          },
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sgcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-0a7d1b538bd6461af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0a7d1b538bd6461af",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a2df33f46a9fcce"
          },
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-08dad4e1acfd0237c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-08dad4e1acfd0237c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a2df33f46a9fcce"
          },
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-0097738fa79c7b2f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0097738fa79c7b2f8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a2df33f46a9fcce"
          },
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sgcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:vpc/vpc-07a2df33f46a9fcce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fef2ab839e1e153f",
            "default_route_table_id": "rtb-0b8569001c6fd344a",
            "default_security_group_id": "sg-0b3e310145767a0a6",
            "dhcp_options_id": "dopt-e00f1286",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07a2df33f46a9fcce",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b8569001c6fd344a",
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sgcmodule.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:security-group/sg-081221296fc424865",
            "description": "Security group for web-server with HTTP ports open within VPC",
            "egress": [],
            "id": "sg-081221296fc424865",
            "ingress": [],
            "name": "web-server-20210514065819880600000003",
            "name_prefix": "web-server-",
            "owner_id": "485217407576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a2df33f46a9fcce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sgcmodule.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-720692513",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-081221296fc424865",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.web_server_sg.module.sg.aws_security_group.this",
            "module.sgcmodule.module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.sgcmodule.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3523660378",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-081221296fc424865",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.web_server_sg.module.sg.aws_security_group.this",
            "module.sgcmodule.module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.sgcmodule.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-403467041",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-081221296fc424865",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sgcmodule.module.vpc.aws_vpc.this",
            "module.sgcmodule.module.web_server_sg.module.sg.aws_security_group.this",
            "module.sgcmodule.module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmodule",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:485217407576:instance/i-0d229540a33e2861c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d229540a33e2861c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c6937ede33d144ca",
            "private_dns": "ip-172-31-13-165.eu-west-1.compute.internal",
            "private_ip": "172.31.13.165",
            "public_dns": "ec2-3-250-102-85.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.250.102.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-079da2909cb948c7f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-81d8c4e7",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-98c568c9"
            ]
          }
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05716726f55924124",
            "domain": "vpc",
            "id": "eipalloc-0192b293c058cd826",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0dc4e20ea4fa40b76",
            "private_dns": "ip-10-0-101-73.eu-west-1.compute.internal",
            "private_ip": "10.0.101.73",
            "public_dns": "ec2-54-217-143-8.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.217.143.8",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ec40e65ee2e7972e",
            "domain": "vpc",
            "id": "eipalloc-0f2ff62bd7cb9af38",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-05ee3e5a2ec91e11d",
            "private_dns": "ip-10-0-102-28.eu-west-1.compute.internal",
            "private_ip": "10.0.102.28",
            "public_dns": "ec2-54-73-172-245.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.73.172.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0fbd413a1820e8475",
            "domain": "vpc",
            "id": "eipalloc-07a642c2a5a417885",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-077be16221403f8b1",
            "private_dns": "ip-10-0-103-71.eu-west-1.compute.internal",
            "private_ip": "10.0.103.71",
            "public_dns": "ec2-52-30-80-235.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.30.80.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1c",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:internet-gateway/igw-0f0755268672757f7",
            "id": "igw-0f0755268672757f7",
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b89a35e01c9ab06"
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0192b293c058cd826",
            "id": "nat-0854bb40c8e0e8b56",
            "network_interface_id": "eni-0dc4e20ea4fa40b76",
            "private_ip": "10.0.101.73",
            "public_ip": "54.217.143.8",
            "subnet_id": "subnet-0adbbfe06d77a4f03",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_eip.nat",
            "module.vpcmodule.module.vpc.aws_internet_gateway.this",
            "module.vpcmodule.module.vpc.aws_subnet.public",
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2ff62bd7cb9af38",
            "id": "nat-096fd93101c30c88c",
            "network_interface_id": "eni-05ee3e5a2ec91e11d",
            "private_ip": "10.0.102.28",
            "public_ip": "54.73.172.245",
            "subnet_id": "subnet-0b6db2173fdd44f89",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_eip.nat",
            "module.vpcmodule.module.vpc.aws_internet_gateway.this",
            "module.vpcmodule.module.vpc.aws_subnet.public",
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a642c2a5a417885",
            "id": "nat-0f1d82663da431b7d",
            "network_interface_id": "eni-077be16221403f8b1",
            "private_ip": "10.0.103.71",
            "public_ip": "52.30.80.235",
            "subnet_id": "subnet-0137804a4841675db",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_eip.nat",
            "module.vpcmodule.module.vpc.aws_internet_gateway.this",
            "module.vpcmodule.module.vpc.aws_subnet.public",
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fec811c32283d7c41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0854bb40c8e0e8b56",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fec811c32283d7c4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpcmodule.module.vpc.aws_eip.nat",
            "module.vpcmodule.module.vpc.aws_internet_gateway.this",
            "module.vpcmodule.module.vpc.aws_nat_gateway.this",
            "module.vpcmodule.module.vpc.aws_route_table.private",
            "module.vpcmodule.module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0717c79215bcc28871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-096fd93101c30c88c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0717c79215bcc2887",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpcmodule.module.vpc.aws_eip.nat",
            "module.vpcmodule.module.vpc.aws_internet_gateway.this",
            "module.vpcmodule.module.vpc.aws_nat_gateway.this",
            "module.vpcmodule.module.vpc.aws_route_table.private",
            "module.vpcmodule.module.vpc.aws_subnet.public",
            "module.vpcmodule.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0088a05a453c79ff91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f1d82663da431b7d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0088a05a453c79ff9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_internet_gateway.this",
            "module.vpcmodule.module.vpc.aws_nat_gateway.this",
            "module.vpcmodule.module.vpc.aws_route_table.private",
            "module.vpcmodule.module.vpc.aws_subnet.public",
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpcmodule.module.vpc.aws_eip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f0755268672757f7",
            "id": "r-rtb-0aa87f3255715fba21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aa87f3255715fba2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_internet_gateway.this",
            "module.vpcmodule.module.vpc.aws_route_table.public",
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:route-table/rtb-0fec811c32283d7c4",
            "id": "rtb-0fec811c32283d7c4",
            "owner_id": "485217407576",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0854bb40c8e0e8b56",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b89a35e01c9ab06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpcmodule.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:route-table/rtb-0717c79215bcc2887",
            "id": "rtb-0717c79215bcc2887",
            "owner_id": "485217407576",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-096fd93101c30c88c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b89a35e01c9ab06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:route-table/rtb-0088a05a453c79ff9",
            "id": "rtb-0088a05a453c79ff9",
            "owner_id": "485217407576",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f1d82663da431b7d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b89a35e01c9ab06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:route-table/rtb-0aa87f3255715fba2",
            "id": "rtb-0aa87f3255715fba2",
            "owner_id": "485217407576",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0755268672757f7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b89a35e01c9ab06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpcmodule.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06179047000ad2c31",
            "route_table_id": "rtb-0fec811c32283d7c4",
            "subnet_id": "subnet-0cb3a25083623dad5"
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_route_table.private",
            "module.vpcmodule.module.vpc.aws_subnet.private",
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0452e6b0270fb48cd",
            "route_table_id": "rtb-0717c79215bcc2887",
            "subnet_id": "subnet-0b715286964020046"
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_route_table.private",
            "module.vpcmodule.module.vpc.aws_subnet.private",
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcac040c4bb081ff",
            "route_table_id": "rtb-0088a05a453c79ff9",
            "subnet_id": "subnet-0a75889cda3ada293"
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_route_table.private",
            "module.vpcmodule.module.vpc.aws_subnet.private",
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0455f3d51b4252163",
            "route_table_id": "rtb-0aa87f3255715fba2",
            "subnet_id": "subnet-0adbbfe06d77a4f03"
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_route_table.public",
            "module.vpcmodule.module.vpc.aws_subnet.public",
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c160a1b14fbdc67",
            "route_table_id": "rtb-0aa87f3255715fba2",
            "subnet_id": "subnet-0b6db2173fdd44f89"
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_route_table.public",
            "module.vpcmodule.module.vpc.aws_subnet.public",
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7c92d3e6e534702",
            "route_table_id": "rtb-0aa87f3255715fba2",
            "subnet_id": "subnet-0137804a4841675db"
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_route_table.public",
            "module.vpcmodule.module.vpc.aws_subnet.public",
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-0cb3a25083623dad5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0cb3a25083623dad5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b89a35e01c9ab06"
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpcmodule.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-0b715286964020046",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b715286964020046",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b89a35e01c9ab06"
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-0a75889cda3ada293",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0a75889cda3ada293",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b89a35e01c9ab06"
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-0adbbfe06d77a4f03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0adbbfe06d77a4f03",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b89a35e01c9ab06"
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-0b6db2173fdd44f89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0b6db2173fdd44f89",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b89a35e01c9ab06"
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:subnet/subnet-0137804a4841675db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0137804a4841675db",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b89a35e01c9ab06"
          },
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpcmodule.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:vpc/vpc-08b89a35e01c9ab06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0713969a5929a5933",
            "default_route_table_id": "rtb-0917061c455a26727",
            "default_security_group_id": "sg-0a67835ecbb0da818",
            "dhcp_options_id": "dopt-e00f1286",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08b89a35e01c9ab06",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0917061c455a26727",
            "owner_id": "485217407576",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:485217407576:security-group/sg-06c2d3af8fd5b0b6e",
            "description": "Security group for web-server with HTTP ports open within VPC",
            "egress": [],
            "id": "sg-06c2d3af8fd5b0b6e",
            "ingress": [],
            "name": "web-server-20210514065741561800000001",
            "name_prefix": "web-server-",
            "owner_id": "485217407576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b89a35e01c9ab06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1697602616",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06c2d3af8fd5b0b6e",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.web_server_sg.module.sg.aws_security_group.this",
            "module.vpcmodule.module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1637549833",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06c2d3af8fd5b0b6e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.web_server_sg.module.sg.aws_security_group.this",
            "module.vpcmodule.module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmodule.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-878692",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06c2d3af8fd5b0b6e",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmodule.module.vpc.aws_vpc.this",
            "module.vpcmodule.module.web_server_sg.module.sg.aws_security_group.this",
            "module.vpcmodule.module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}